plugins {
    id 'java'
}

version '1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'junit:junit:4.13.1'
    implementation 'junit:junit:4.13.1'
    implementation 'org.projectlombok:lombok:1.18.26'
    testImplementation 'org.assertj:assertj-core:3.22.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

test {
    useJUnitPlatform()
}
